# test-new-build

./: README.md  cabal.project
a/: a.cabal
b/: b.cabal
b/src/: B.hs
c/: c.cabal
papa/: papa.cabal
papa-bifunctors/: papa-bifunctors.cabal
papa-bifunctors-export/: c.cabal
papa-bifunctors-export/src/: C.hs
papa/src/: A.hs
