name:               papa
version:            0.2.0
license:            BSD3
cabal-version:      >= 1.10
build-type:         Custom

library
  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                    , papa-bifunctors
                    , papa-bifunctors-export
                    , papa-bifunctors-implement
                   
  hs-source-dirs:
                    src

  exposed-modules:
                    A
                    
test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 3
                    , doctest >= 0.9.7
                    , filepath >= 1.3
                    , directory >= 1.1
                    , QuickCheck >= 2.0
                    , template-haskell >= 2.8

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
